--- a/src/components/DatePicker.css
+++ b/src/components/DatePicker.css
@@ -36,4 +36,10 @@
     background-color: #ff6b70;
     color: white;
     cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.search form input[type=submit]:hover{
+    background-color: white;
+    color:#ff6b70;
 }
