--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -41,4 +41,16 @@
     text-transform: inherit !important;
     color: #222222 !important;
     font-size: 12px !important;
+    padding: 0px !important;
+}
+
+
+.banner__infoBtn a {
+    text-decoration:none;
+    display:block;
+    padding: 10px;
+}
+
+.banner__infoBtn a:focus {
+    color: black;
 }
