SearchResult component added in ResultPage

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -51,6 +51,8 @@
     padding: 10px;
 }
 
-.banner__infoBtn a:focus {
+.banner__infoBtn a:focus,
+.banner__infoBtn a:visited {
     color: black;
 }
+ 
